--- a/index.html
+++ b/index.html
@@ -1,27 +1,147 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Xavfli Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Xavfli | Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
   <style>
     body {
       background-color: #0d1117;
       color: #c9d1d9;
-      font-family: sans-serif;
-      text-align: center;
-      padding: 100px;
     }
-    h1 {
+    nav {
+      background-color: #161b22;
+    }
+    .navbar-brand {
+      font-weight: bold;
+    }
+    section {
+      padding: 60px 0;
+    }
+    .project-card {
+      background-color: #21262d;
+      border: none;
+    }
+    .project-card h5 {
       color: #58a6ff;
     }
-    a {
+    footer {
+      background-color: #161b22;
+      padding: 20px 0;
+      text-align: center;
       color: #8b949e;
     }
   </style>
 </head>
 <body>
-  <h1>Salom, men xavfli 👋</h1>
-  <p>Bu mening GitHub sahifam.</p>
-  <p><a href="https://github.com/xavfli" target="_blank">GitHub profilim</a></p>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark px-4">
+    <a class="navbar-brand" href="#">Xavfli</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto gap-3">
+        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="cv.pdf" target="_blank">Resume</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Home -->
+  <section id="home" class="text-center">
+    <div class="container">
+      <h1 class="display-4">Hi, I'm <span class="text-primary">Xavfli</span></h1>
+      <p class="lead">Full Stack Developer • Open Source Contributor • Tech Enthusiast</p>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about">
+    <div class="container">
+      <h2 class="mb-4">About Me</h2>
+      <p>
+        I'm a passionate developer focused on building scalable web applications and elegant user interfaces. I specialize in Django, REST APIs, and JavaScript technologies.
+      </p>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects">
+    <div class="container">
+      <h2 class="mb-4">Projects</h2>
+      <div class="row" id="project-list">
+        <!-- JS orqali yuklanadi -->
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <div class="container">
+      <h2 class="mb-4">Contact Me</h2>
+      <form>
+        <div class="mb-3">
+          <label class="form-label">Your Name</label>
+          <input type="text" class="form-control" placeholder="Full Name" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Your Email</label>
+          <input type="email" class="form-control" placeholder="Email Address" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Message</label>
+          <textarea class="form-control" rows="5" placeholder="Type your message..."></textarea>
+        </div>
+        <button class="btn btn-primary">Send</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Xavfli. All rights reserved.</p>
+  </footer>
+
+  <script>
+    const projects = [
+      {
+        title: "Amaliyot Docx Generator",
+        description: "Django asosida Word hujjatlarni avtomatik generatsiya qiluvchi tizim.",
+        link: "https://github.com/xavfli/amaliyotdocx"
+      },
+      {
+        title: "Peak Explorer",
+        description: "Android uchun cho‘qqilarni o‘rganish mobil ilovasi.",
+        link: "https://github.com/xavfli/Peak-Explorer"
+      },
+      {
+        title: "LingoFuel",
+        description: "Chet tillarini o‘rganishga yordam beruvchi web ilova.",
+        link: "https://github.com/xavfli/LingoFuel"
+      }
+    ];
+
+    const container = document.getElementById("project-list");
+
+    projects.forEach((project) => {
+      container.innerHTML += `
+        <div class="col-md-4 mb-4">
+          <div class="card project-card p-3 h-100">
+            <h5>${project.title}</h5>
+            <p>${project.description}</p>
+            <a href="${project.link}" target="_blank" class="btn btn-outline-light btn-sm">GitHub →</a>
+          </div>
+        </div>
+      `;
+    });
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
