--- a/index.html
+++ b/index.html
@@ -1,55 +1,73 @@
 <!DOCTYPE html>
 <html lang="uz">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boburbek | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boburbek | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Boburbek</h1>
-      <p>Dasturchi | Web Developer | Open Source Contributor</p>
-    </div>
-  </header>
 
-  <nav>
-    <ul>
-      <li><a href="#about">Men haqimda</a></li>
-      <li><a href="#projects">Loyihalar</a></li>
-      <li><a href="#contact">Bog‘lanish</a></li>
-    </ul>
-  </nav>
+    <header>
+        <div class="container">
+            <h1>Salom, men Boburbek</h1>
+            <p>Full Stack Web Dasturchi | Django | HTML | JS</p>
+            <a href="#projects" class="btn">Loyihalarimni ko‘rish</a>
+        </div>
+    </header>
 
-  <main class="container">
     <section id="about">
-      <h2>Men haqimda</h2>
-      <p>Salom! Men Boburbek, Python va Django asosidagi web ilovalar ishlab chiquvchisiman. Portfolio sahifam orqali loyihalarim va faoliyatim bilan tanishishingiz mumkin.</p>
+        <div class="container">
+            <h2>👨‍💻 Men haqimda</h2>
+            <p>
+                Assalomu alaykum! Men <strong>Boburbek</strong>, Muhammad al-Xorazmiy nomidagi Toshkent Axborot Texnologiyalari Universiteti talabasi va veb dasturchiman.
+                Frontend va backend yo‘nalishlarida kuchli bilimga egaman. Django, REST API, HTML/CSS, JavaScript bilan ishlash menga zavq beradi.
+            </p>
+            <h3>🔧 Qobiliyatlarim:</h3>
+            <ul>
+                <li>✅ Django / Django REST Framework</li>
+                <li>✅ HTML5 / CSS3 / Bootstrap</li>
+                <li>✅ JavaScript / DOM manipulyatsiyasi</li>
+                <li>✅ Git va GitHub</li>
+                <li>✅ Microsoft .docx / .xlsx fayllar bilan ishlash</li>
+            </ul>
+            <h3>🎯 Maqsadim:</h3>
+            <p>Texnologiyalar yordamida foydali va bardavom loyihalar yaratish.</p>
+        </div>
     </section>
 
     <section id="projects">
-      <h2>Loyihalar</h2>
-      <div id="projects-list">
-        <!-- GitHub API orqali loyihalar yuklanadi -->
-      </div>
+        <div class="container">
+            <h2>📁 Loyihalar</h2>
+            <div class="project">
+                <h3>📄 Amaliyot Hujjatlari Avtomatlashtirish</h3>
+                <p>Django yordamida .docx (shartnoma, kundalik, yo‘llanma) fayllarni avtomatik generatsiya qilish tizimi. Excel yoki Worddan yuklab ma’lumot kiritish va ZIP holatda yuklab olish imkoniyati.</p>
+                <a href="https://github.com/xavfli/amaliyotdocx" target="_blank">GitHubda ko‘rish →</a>
+            </div>
+            <div class="project">
+                <h3>🌐 Portfolio Sayt</h3>
+                <p>GitHub Pages orqali deploy qilingan, HTML/CSS va JavaScript asosida yasalgan shaxsiy portfolio sahifa.</p>
+                <a href="https://xavfli.github.io/" target="_blank">Saytni ko‘rish →</a>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
-      <h2>Bog‘lanish</h2>
-      <form id="contact-form">
-        <input type="text" placeholder="Ismingiz" required>
-        <input type="email" placeholder="Email manzilingiz" required>
-        <textarea placeholder="Xabar..." required></textarea>
-        <button type="submit">Yuborish</button>
-      </form>
+        <div class="container">
+            <h2>📞 Aloqa</h2>
+            <p>Menga quyidagi manzillar orqali bog‘lanishingiz mumkin:</p>
+            <ul>
+                <li>Email: <a href="mailto:xavfli.dev@gmail.com">nboburbek778@gmail.com</a></li>
+                <li>GitHub: <a href="https://github.com/xavfli" target="_blank">github.com/xavfli</a></li>
+            </ul>
+        </div>
     </section>
-  </main>
 
-  <footer>
-    <p>&copy; 2025 Boburbek | GitHub: <a href="https://github.com/xavfli" target="_blank">xavfli</a></p>
-  </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Boburbek. Barcha huquqlar himoyalangan.</p>
+        </div>
+    </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
